cmake: Change endif(.*) to endif()

--- a/Source/Core/AudioCommon/CMakeLists.txt
+++ b/Source/Core/AudioCommon/CMakeLists.txt
@@ -9,27 +9,27 @@ set(LIBS "")
 if(OPENSLES_FOUND)
 	set(SRCS ${SRCS} OpenSLESStream.cpp)
 	set(LIBS ${LIBS} ${OPENSLES_LIBRARIES})
-endif(OPENSLES_FOUND)
+endif()
 
 if(ALSA_FOUND)
 	set(SRCS ${SRCS} AlsaSoundStream.cpp)
 	set(LIBS ${LIBS} ${ALSA_LIBRARIES})
-endif(ALSA_FOUND)
+endif()
 
 if(AO_FOUND)
 	set(SRCS ${SRCS} AOSoundStream.cpp)
 	set(LIBS ${LIBS} ${AO_LIBRARIES})
-endif(AO_FOUND)
+endif()
 
 if(OPENAL_FOUND)
 	set(SRCS ${SRCS} OpenALStream.cpp aldlist.cpp)
 	set(LIBS ${LIBS} ${OPENAL_LIBRARY} SoundTouch )
-endif(OPENAL_FOUND)
+endif()
 
 if(PULSEAUDIO_FOUND)
 	set(SRCS ${SRCS} PulseAudioStream.cpp)
 	set(LIBS ${LIBS} ${PULSEAUDIO_LIBRARIES})
-endif(PULSEAUDIO_FOUND)
+endif()
 
 if(WIN32)
 	set(SRCS ${SRCS} XAudio2Stream.cpp)
