cmake: Change else(.*) to else()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -683,7 +683,7 @@ find_package(ZLIB)
 if(ZLIB_FOUND)
 	message(STATUS "Using shared zlib")
 	include_directories(${ZLIB_INCLUDE_DIRS})
-else(ZLIB_FOUND)
+else()
 	message(STATUS "Shared zlib not found, falling back to the static library")
 	add_subdirectory(Externals/zlib)
 	include_directories(Externals/zlib)
@@ -733,14 +733,14 @@ if(ENABLE_SDL)
 		message(STATUS "Using shared SDL2")
 		add_definitions(-DHAVE_SDL=1)
 		include_directories(${SDL2_INCLUDE_DIR})
-	else(SDL2_FOUND)
+	else()
 		# SDL2 not found, try SDL
 		find_package(SDL OPTIONAL)
 		if(SDL_FOUND)
 			message(STATUS "Using shared SDL")
 			add_definitions(-DHAVE_SDL=1)
 			include_directories(${SDL_INCLUDE_DIR})
-		else(SDL_FOUND)
+		else()
 			message(STATUS "SDL NOT found, disabling SDL input")
 		endif()
 	endif()
@@ -935,7 +935,7 @@ if(NOT DISABLE_WX)
 	if(wxWidgets_FOUND)
 		include(${wxWidgets_USE_FILE})
 		message(STATUS "wxWidgets found, enabling GUI build")
-	else(wxWidgets_FOUND)
+	else()
 		message(STATUS "Using static wxWidgets from Externals")
 
 		# These definitions and includes are used when building dolphin against wx,
