cmake: Change endmacro(.*) to endmacro()

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -11,7 +11,7 @@ add_definitions(-D__STDC_CONSTANT_MACROS)
 macro(add_dolphin_library lib srcs libs)
 	add_library(${lib} STATIC ${srcs})
 	target_link_libraries(${lib} ${libs})
-endmacro(add_dolphin_library)
+endmacro()
 
 add_subdirectory(Core)
 if (ANDROID)
