--- a/Source/UnitTests/CMakeLists.txt
+++ b/Source/UnitTests/CMakeLists.txt
@@ -17,7 +17,7 @@ macro(add_dolphin_test target srcs)
 	target_link_libraries(Test_${target} ${LIBS})
 	add_dependencies(unittests Test_${target})
 	add_test(NAME ${target} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Tests/${target})
-endmacro(add_dolphin_test)
+endmacro()
 
 add_subdirectory(TestUtils)
 
