--- a/Data/Sys/GameSettings/SQI.ini
+++ b/Data/Sys/GameSettings/SQI.ini
@@ -1,4 +1,4 @@
-# SCYE4Q, SCYP4Q, SCYX4Q, SCYY4Q, SCYZ4Q - Cars 2
+# SQIE4Q, SQIP4Q - Disney Infinity
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -7,7 +7,7 @@ LowDCBZHack = 1
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
-EmulationStateId = 1
+EmulationStateId = 3
 EmulationIssues =
 
 [OnLoad]
