--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -3,6 +3,17 @@ if(NOT FLAG_CXX_CXX14)
   check_and_add_flag(HAS_CXX1Y -std=c++1y)
 endif()
 
+if(CMAKE_SYSTEM_NAME MATCHES "Windows")
+  add_definitions(-DNOMINMAX)
+  add_definitions(-DUNICODE)
+  add_definitions(-D_UNICODE)
+  add_definitions(-DWIN32_LEAN_AND_MEAN)
+  add_definitions(-D_WIN32_WINNT=0x0602)
+  add_definitions(-D_SECURE_SCL=0)
+  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+  add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
+endif()
+
 # These aren't actually needed for C11/C++11
 # but some dependencies require them (LLVM, libav).
 add_definitions(-D__STDC_LIMIT_MACROS)
