CMake: Disable PortAudio support for ASIO, DS, and WDMKS
Fixes a link-time error, and matches what the vcxproj does.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -568,6 +568,9 @@ if(NOT ANDROID)
 		set(PORTAUDIO_LIBRARIES portaudio)
 	else()
 		message(STATUS "Using static PortAudio from Externals for mic support")
+		option(PA_USE_ASIO "Enable PortAudio support for ASIO" OFF)
+		option(PA_USE_DS "Enable PortAudio support for DirectSound" OFF)
+		option(PA_USE_WDMKS "Enable PortAudio support for WDMKS" OFF)
 		add_subdirectory(Externals/portaudio)
 		set(PORTAUDIO_LIBRARIES portaudio_static)
 	endif()
