portaudio: Prevent files from being install()'ed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -570,7 +570,7 @@ if(NOT ANDROID)
 		option(PA_USE_ASIO "Enable PortAudio support for ASIO" OFF)
 		option(PA_USE_DS "Enable PortAudio support for DirectSound" OFF)
 		option(PA_USE_WDMKS "Enable PortAudio support for WDMKS" OFF)
-		add_subdirectory(Externals/portaudio)
+		add_subdirectory(Externals/portaudio EXCLUDE_FROM_ALL)
 		set(PORTAUDIO_LIBRARIES portaudio_static)
 	endif()
 endif()
