OpenAL: Move Windows binaries to lib folder and fix CMake detection
The module FindOpenAL is looking for the dll in a folder called lib, not x64.
This is only used on Windows x64, it's fine to remove the platform name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -484,6 +484,9 @@ else()
 endif()
 
 if(ENABLE_OPENAL)
+	if(WIN32)
+		set(ENV{OPENALDIR} ${CMAKE_CURRENT_LIST_DIR}/Externals/OpenAL)
+	endif()
 	find_package(OpenAL)
 	if(OPENAL_FOUND)
 		add_definitions(-DHAVE_OPENAL=1)
