cmake: Move ALSA detection to AudioCommon

--- a/Source/Core/AudioCommon/CMakeLists.txt
+++ b/Source/Core/AudioCommon/CMakeLists.txt
@@ -15,10 +15,18 @@ if(OPENSLES_FOUND)
   target_link_libraries(audiocommon PRIVATE OpenSLES::OpenSLES)
 endif()
 
-find_package(ALSA)
-if(ALSA_FOUND)
-  target_sources(audiocommon PRIVATE AlsaSoundStream.cpp)
-  target_link_libraries(audiocommon PRIVATE ALSA::ALSA)
+if(ENABLE_ALSA)
+  find_package(ALSA)
+  if(ALSA_FOUND)
+    message(STATUS "ALSA found, enabling ALSA sound backend")
+    target_sources(audiocommon PRIVATE AlsaSoundStream.cpp)
+    target_link_libraries(audiocommon PRIVATE ALSA::ALSA)
+    target_compile_definitions(audiocommon PRIVATE HAVE_ALSA=1)
+  else()
+    message(STATUS "ALSA NOT found, disabling ALSA sound backend")
+  endif()
+else()
+  message(STATUS "ALSA explicitly disabled, disabling ALSA sound backend")
 endif()
 
 if(AO_FOUND)
