cmake: Move detection of OpenAL to AudioCommon

--- a/Source/Core/AudioCommon/CMakeLists.txt
+++ b/Source/Core/AudioCommon/CMakeLists.txt
@@ -43,9 +43,21 @@ else()
   message(STATUS "ao explicitly disabled, disabling ao sound backend")
 endif()
 
-if(OPENAL_FOUND)
-  target_sources(audiocommon PRIVATE OpenALStream.cpp aldlist.cpp)
-  target_link_libraries(audiocommon PRIVATE ${OPENAL_LIBRARY} SoundTouch)
+if(ENABLE_OPENAL)
+  if(WIN32)
+    set(ENV{OPENALDIR} ${PROJECT_SOURCE_DIR}/Externals/OpenAL)
+  endif()
+  find_package(OpenAL)
+  if(OPENAL_FOUND)
+    message(STATUS "OpenAL found, enabling OpenAL sound backend")
+    target_sources(audiocommon PRIVATE OpenALStream.cpp aldlist.cpp)
+    target_link_libraries(audiocommon PRIVATE OpenAL::OpenAL SoundTouch)
+    target_compile_definitions(audiocommon PRIVATE HAVE_OPENAL=1)
+  else()
+    message(STATUS "OpenAL NOT found, disabling OpenAL sound backend")
+  endif()
+else()
+  message(STATUS "OpenAL explicitly disabled, disabling OpenAL sound backend")
 endif()
 
 if(PULSEAUDIO_FOUND)
