--- a/Source/Core/InputCommon/CMakeLists.txt
+++ b/Source/Core/InputCommon/CMakeLists.txt
@@ -51,27 +51,29 @@ if(UNIX)
 	set(SRCS ${SRCS} ControllerInterface/Pipes/Pipes.cpp)
 endif()
 
-find_package(SDL2)
-if(SDL2_FOUND)
-	message(STATUS "Using shared SDL2")
-	set(SDL_TARGET SDL2::SDL2)
-else()
-	# SDL2 not found, try SDL
-	find_package(SDL)
-	if(SDL_FOUND)
-		message(STATUS "Using shared SDL")
-		add_library(System_SDL INTERFACE)
-		target_include_directories(System_SDL INTERFACE ${SDL_INCLUDE_DIR})
-		target_link_libraries(System_SDL INTERFACE ${SDL_LIBRARY})
-		set(SDL_TARGET System_SDL)
+if(ENABLE_SDL)
+	find_package(SDL2)
+	if(SDL2_FOUND)
+		message(STATUS "Using shared SDL2")
+		set(SDL_TARGET SDL2::SDL2)
+	else()
+		# SDL2 not found, try SDL
+		find_package(SDL)
+		if(SDL_FOUND)
+			message(STATUS "Using shared SDL")
+			add_library(System_SDL INTERFACE)
+			target_include_directories(System_SDL INTERFACE ${SDL_INCLUDE_DIR})
+			target_link_libraries(System_SDL INTERFACE ${SDL_LIBRARY})
+			set(SDL_TARGET System_SDL)
+		endif()
 	endif()
-endif()
-if(SDL_TARGET AND TARGET ${SDL_TARGET})
-	set(SRCS ${SRCS} ControllerInterface/SDL/SDL.cpp)
-	set(LIBS ${LIBS} ${SDL_TARGET})
-	add_definitions(-DHAVE_SDL=1)
-else()
-  message(STATUS "SDL NOT found, disabling SDL input")
+	if(SDL_TARGET AND TARGET ${SDL_TARGET})
+		set(SRCS ${SRCS} ControllerInterface/SDL/SDL.cpp)
+		set(LIBS ${LIBS} ${SDL_TARGET})
+		add_definitions(-DHAVE_SDL=1)
+	else()
+	  message(STATUS "SDL NOT found, disabling SDL input")
+	endif()
 endif()
 
 add_dolphin_library(inputcommon "${SRCS}" "${LIBS}")
