CMake: re-run if .git/$(symbolic-full-name HEAD) changes
In an oversight, PR #4841 didn't handle committing to or amending a
branch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,15 @@ if(GIT_FOUND)
 		OUTPUT_STRIP_TRAILING_WHITESPACE)
 	set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${dolphin_git_head_filename}")
 
+	execute_process(WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} COMMAND ${GIT_EXECUTABLE} rev-parse --symbolic-full-name HEAD
+		OUTPUT_VARIABLE dolphin_git_head_symbolic
+		OUTPUT_STRIP_TRAILING_WHITESPACE)
+	execute_process(WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+		COMMAND ${GIT_EXECUTABLE} rev-parse --git-path ${dolphin_git_head_symbolic}
+		OUTPUT_VARIABLE dolphin_git_head_symbolic_filename
+		OUTPUT_STRIP_TRAILING_WHITESPACE)
+	set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${dolphin_git_head_symbolic_filename}")
+
 	# defines DOLPHIN_WC_REVISION
 	EXECUTE_PROCESS(WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} COMMAND ${GIT_EXECUTABLE} rev-parse HEAD
 		OUTPUT_VARIABLE DOLPHIN_WC_REVISION
