cmake: Move PulseAudio detection to AudioCommon

--- a/Source/Core/AudioCommon/CMakeLists.txt
+++ b/Source/Core/AudioCommon/CMakeLists.txt
@@ -60,9 +60,20 @@ else()
   message(STATUS "OpenAL explicitly disabled, disabling OpenAL sound backend")
 endif()
 
-if(PULSEAUDIO_FOUND)
-  target_sources(audiocommon PRIVATE PulseAudioStream.cpp)
-  target_link_libraries(audiocommon PRIVATE ${PULSEAUDIO_LIBRARIES})
+if(ENABLE_PULSEAUDIO)
+  # PulseAudio ships with a PulseAudioConfig.cmake with no imported target
+  # So we use our own FindPulseAudio instead with "MODULE"
+  find_package(PulseAudio MODULE QUIET)
+  if(PULSEAUDIO_FOUND)
+    message(STATUS "PulseAudio found, enabling PulseAudio sound backend")
+    target_sources(audiocommon PRIVATE PulseAudioStream.cpp)
+    target_link_libraries(audiocommon PRIVATE PulseAudio::PulseAudio)
+    target_compile_definitions(audiocommon PRIVATE HAVE_PULSEAUDIO=1)
+  else()
+    message(STATUS "PulseAudio NOT found, disabling PulseAudio sound backend")
+  endif()
+else()
+  message(STATUS "PulseAudio explicitly disabled, disabling PulseAudio sound backend")
 endif()
 
 if(WIN32)
