UICommon: Rename HAS_LLVM to HAVE_LLVM

--- a/Source/Core/UICommon/CMakeLists.txt
+++ b/Source/Core/UICommon/CMakeLists.txt
@@ -13,7 +13,7 @@ if(ENABLE_LLVM)
   find_package(LLVM CONFIG QUIET)
   if(LLVM_FOUND)
     message(STATUS "LLVM found, enabling LLVM support in disassembler")
-    target_compile_definitions(uicommon PRIVATE HAS_LLVM)
+    target_compile_definitions(uicommon PRIVATE HAVE_LLVM)
     target_link_libraries(uicommon PRIVATE ${LLVM_AVAILABLE_LIBS})
     target_include_directories(uicommon PRIVATE ${LLVM_INCLUDE_DIRS})
   endif()
