CMake: move modules from CMakeTests/ -> CMake/
The name "CMakeTests" is inaccurate and irregular.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ endif()
 option(DSPTOOL "Build dsptool" OFF)
 
 list(APPEND CMAKE_MODULE_PATH
-	${CMAKE_SOURCE_DIR}/CMakeTests
+        ${CMAKE_SOURCE_DIR}/CMake
 )
 
 # Support functions
