--- a/Source/Core/InputCommon/CMakeLists.txt
+++ b/Source/Core/InputCommon/CMakeLists.txt
@@ -1,5 +1,19 @@
 set(SRCS InputConfig.cpp
          ControllerEmu/ControllerEmu.cpp
+         ControllerEmu/Control/Control.cpp
+         ControllerEmu/Control/Input.cpp
+         ControllerEmu/Control/Output.cpp
+         ControllerEmu/ControlGroup/AnalogStick.cpp
+         ControllerEmu/ControlGroup/Buttons.cpp
+         ControllerEmu/ControlGroup/ControlGroup.cpp
+         ControllerEmu/ControlGroup/Cursor.cpp
+         ControllerEmu/ControlGroup/Extension.cpp
+         ControllerEmu/ControlGroup/Force.cpp
+         ControllerEmu/ControlGroup/MixedTriggers.cpp
+         ControllerEmu/ControlGroup/ModifySettingsButton.cpp
+         ControllerEmu/ControlGroup/Slider.cpp
+         ControllerEmu/ControlGroup/Tilt.cpp
+         ControllerEmu/ControlGroup/Triggers.cpp
          ControllerInterface/ControllerInterface.cpp
          ControllerInterface/Device.cpp
          ControlReference/ControlReference.cpp
