--- a/Source/Core/InputCommon/InputCommon.vcxproj
+++ b/Source/Core/InputCommon/InputCommon.vcxproj
@@ -36,6 +36,20 @@
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
     <ClCompile Include="ControllerEmu\ControllerEmu.cpp" />
+    <ClCompile Include="ControllerEmu\Control\Control.cpp" />
+    <ClCompile Include="ControllerEmu\Control\Input.cpp" />
+    <ClCompile Include="ControllerEmu\Control\Output.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\AnalogStick.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\Buttons.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\ControlGroup.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\Cursor.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\Extension.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\Force.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\MixedTriggers.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\ModifySettingsButton.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\Slider.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\Tilt.cpp" />
+    <ClCompile Include="ControllerEmu\ControlGroup\Triggers.cpp" />
     <ClCompile Include="ControllerInterface\ControllerInterface.cpp" />
     <ClCompile Include="ControllerInterface\Device.cpp" />
     <ClCompile Include="ControllerInterface\DInput\DInput.cpp" />
@@ -57,6 +71,20 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ControllerEmu\ControllerEmu.h" />
+    <ClInclude Include="ControllerEmu\Control\Control.h" />
+    <ClInclude Include="ControllerEmu\Control\Input.h" />
+    <ClInclude Include="ControllerEmu\Control\Output.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\AnalogStick.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\Buttons.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\ControlGroup.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\Cursor.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\Extension.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\Force.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\MixedTriggers.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\ModifySettingsButton.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\Slider.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\Tilt.h" />
+    <ClInclude Include="ControllerEmu\ControlGroup\Triggers.h" />
     <ClInclude Include="ControllerInterface\ControllerInterface.h" />
     <ClInclude Include="ControllerInterface\Device.h" />
     <ClInclude Include="ControllerInterface\DInput\DInput.h" />
