--- a/Source/Core/InputCommon/InputCommon.vcxproj.filters
+++ b/Source/Core/InputCommon/InputCommon.vcxproj.filters
@@ -16,12 +16,60 @@
     <Filter Include="ControllerEmu">
       <UniqueIdentifier>{4c839215-4085-4e34-a960-7960986ad015}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ControllerEmu\Control">
+      <UniqueIdentifier>{19ddd862-a1e3-479b-b638-bb31700c5171}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ControllerEmu\ControlGroup">
+      <UniqueIdentifier>{e805231c-dc4e-4540-8bf8-8c567f3d00ae}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GCAdapter.cpp" />
     <ClCompile Include="InputConfig.cpp" />
     <ClCompile Include="ControllerEmu\ControllerEmu.cpp">
       <Filter>ControllerEmu</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\Control\Control.cpp">
+      <Filter>ControllerEmu\Control</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\Control\Input.cpp">
+      <Filter>ControllerEmu\Control</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\Control\Output.cpp">
+      <Filter>ControllerEmu\Control</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\AnalogStick.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\Buttons.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\ControlGroup.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\Cursor.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\Extension.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\Force.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\MixedTriggers.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\ModifySettingsButton.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\Slider.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\Tilt.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClCompile>
+    <ClCompile Include="ControllerEmu\ControlGroup\Triggers.cpp">
+      <Filter>ControllerEmu\ControlGroup</Filter>
     </ClCompile>
     <ClCompile Include="ControllerInterface\DInput\DInput.cpp">
       <Filter>ControllerInterface\DInput</Filter>
@@ -60,6 +108,48 @@
     <ClInclude Include="InputConfig.h" />
     <ClInclude Include="ControllerEmu\ControllerEmu.h">
       <Filter>ControllerEmu</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\Control\Control.h">
+      <Filter>ControllerEmu\Control</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\Control\Input.h">
+      <Filter>ControllerEmu\Control</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\Control\Output.h">
+      <Filter>ControllerEmu\Control</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\AnalogStick.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\Buttons.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\ControlGroup.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\Cursor.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\Extension.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\Force.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\MixedTriggers.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\ModifySettingsButton.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\Slider.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\Tilt.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerEmu\ControlGroup\Triggers.h">
+      <Filter>ControllerEmu\ControlGroup</Filter>
     </ClInclude>
     <ClInclude Include="ControllerInterface\DInput\DInput.h">
       <Filter>ControllerInterface\DInput</Filter>
